--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>İnternet Programcılığı Final Ödevi</title>
+    <title>Js Calculator</title>
     <link rel="stylesheet" href="style.css">
-
-
 </head>
 <body>
     <div id="calculator">
@@ -73,10 +71,8 @@
                 -
             </div>
         </div>
-
     </div>
     </div>
     <script src="app.js"></script>
-    
 </body>
 </html>
